# rq

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EDITORS.md  PRIORITY_INDEXING.md  ROADMAP.md
examples/: bench.rs
script/: rq-open
src/: lib.rs  main.rs  trace.rs
src/cli/: mod.rs
src/core/: identity.rs  mod.rs  symbol.rs
src/events/: mod.rs
src/index/: mod.rs
src/lang/: mod.rs
src/lang/go/: mod.rs
src/lang/python/: mod.rs
src/lang/ruby/: mod.rs
src/lang/rust/: mod.rs
src/search/: mod.rs  score.rs
src/store/: mod.rs  schema.rs
tests/: budgeted_index.rs  candidate_recall.rs  cli_e2e.rs  index_integration.rs  lang_fixtures.rs  learning.rs  live_search.rs  ranking_aspirations.rs  ranking_dogfood.rs  rust_fixture.rs  staleness.rs  warm_progress.rs
tests/fixtures/go/: widget.go
tests/fixtures/python/: account.py
tests/fixtures/rust/: widget.rs
