[package]
name = "rq"
version = "0.1.2"
edition = "2024"
description = "Reference Query — find the code you're looking for."
license = "MIT"

[[bin]]
name = "rq"
path = "src/main.rs"

[lib]
name = "rq"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-ruby = "0.23"
