[package]
name = "reference-query"
version = "0.24.1"
edition = "2024"
description = "Reference Query — find the code you're looking for."
license = "MIT"
repository = "https://github.com/dpep/rq"

# Published as `reference-query`; binary stays `rq`.
[[bin]]
name = "rq"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
